--- a/styles/Bootstrap.css
+++ b/styles/Bootstrap.css
@@ -9,6 +9,10 @@
     --black-700: #000;
 
 }
+.picture-caption:hover .fire{
+    transform: scale(1.3);
+    transition: ease-in-out;
+}
 .primary{
     background-color:var(--primary-100);
 }
@@ -47,6 +51,9 @@
 .w-101{
     width: 101px;
 }
+.w-545{
+    width: 545px;
+}
 .w-806{
     width: 806px;
 }
@@ -60,8 +67,14 @@
 }
 .h-41{
     height: 41px;
+}
+.h-678{
+    height: 678px;
 }.w-195{
     width: 195px;
+}
+.w-350{
+    width: 350px;
 }
 .h-53{
     height: 53px;
@@ -100,11 +113,17 @@
 .font-20{
     font-size: 20px;
 }
+.font-35{
+    font-size: 35px;
+}
 .font-16{
     font-size: 16px;
 }
 .font-50{
     font-size: 50px;
+}
+.font-31{
+    font-size: 31px;
 }
 .font-weight-800{
     font-weight: 800;
@@ -112,13 +131,35 @@
 .font-weight-500{
     font-weight: 500;
 }
+.font-weight-600{
+    font-weight: 600;
+}
 .font-weight-700{
     font-weight: 700;
 }
+.font-weight-400{
+    font-weight: 400;
+}
 .line-weight-44{
     line-height: 44.51px;
-}.line-weight-58{
+}
+.line-weight-58{
     line-height: 58px;
+}
+.line-weight-65{
+    line-height: 65.63px;
+}
+.line-weight-56{
+    line-height: 56px;
+}
+.line-weight-30{
+    line-height: 30px;
+}
+.margin{
+    margin-right: 306px;
+    margin-top: 150px;
+    margin-left: 308px;
+
 }
 .m-l-59{
     margin-left: 59.81px;
@@ -141,17 +182,29 @@
 .m-t-7{
     margin-top: 6.8px;
 }
+.m-t-25{
+    margin-top: 25px;
+}
 .m-t-203{
     margin-top: 203px;
 }
+.m-t-150{
+    margin-top: 150px;
+}
 .m-b-30{
     margin-bottom: 30px;
+}
+.m-b-32{
+    margin-bottom: 32px;
 }
 .m-b-57{
     margin-bottom: 57px;
 }
 .m-l-120{
     margin-left: 120px;
+}
+.m-l-148{
+    margin-left: 148px;
 }
 .m-r-146{
     margin-left: 146px;
@@ -169,6 +222,9 @@
     margin-right: 59px;
 
 }
+.games:hover{
+    opacity: 0.5;
+}
 .button2{
     background-color: #5141AA;
     font-size: 20px;
@@ -176,6 +232,16 @@
     font-weight: 500;
     line-height: 37.5px;
     border: none;
+    margin-right: 147px;
+}
+.text{
+    margin-left: 568px;
+    margin-right: 567px;
+    margin-bottom: 15px;
+}
+.fire{
+    width: 25px;
+    height: 25px;
 }
 .dec-none{
     text-decoration: none;
@@ -205,12 +271,31 @@
 .t-409{
     top: 409px;
 }
+.g-9{
+    gap: 9px;
+}
 .images{
     list-style: none;
     gap: 47px;
     margin-left: 110px;
     margin-right: 146px;
     margin-top: 57px;
+}
+.paraf{
+    margin-top: 67px;
+    margin-left: 147px;
+
+}
+.dots{
+    left: 972px;
+    top: 1880px;
+}
+.spider{
+    width: 1146px;
+    height: 462px;
+    border-radius: 5px;
+    margin-top: 46px;
+    margin-right: 146px;
 }
 
 
