--- a/styles/style.css
+++ b/styles/style.css
@@ -1,264 +1,403 @@
-@import "header.css";
-@import "footer.css";
-@font-face {
-  font-family: rubik;
-  src: url(../assets/fonts/Rubik-Regular.ttf);
+*{
+  font-family: Poppins;
 }
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: Poppins, serif;
-
+:root{
+  --black: #000;
+  --purpule : #3B2A9F;
+  --white : #FFFFFF;
+  --secondary :#FA8305;
+  --primary2-100 : #5141AA;
+  --gray : #898989;
 }
 body{
   width: 1440px;
-  color: white;
-
 }
-/* 2. we use :root for default variables */
-:root {
-  /* --"somekey-attr": "somevalue" i.e : */
-  --primary-100: #3B2A9F;
-  --secondary:#FA8305;
-  --white:#ffffff;
-  --primary2-100 : #5141AA;
-  --gray : #898989;
-  --black-700: #000;
-
+.borderbox{
+  box-sizing: border-box;
 }
-/* 3. and we use it like this */
-
-#pa{
-  width: 527px;
+.background-1{
+  background-color: var(--purpule);
+}
+.width-1440{
+  width: 1440px;
+}
+.font-poppins{
+  font-family: Poppins;
+}
+.font-w-400{
+  font-weight: 400;
+}
+.navbar-brand.font-s-29{
+  font-size: 29px;
+}
+.navbar-brand.font-w-800{
+  font-weight: 700;
+}
+.height-100{
+  height: 100px;
+}
+.navbar-brand.ml-58{
+  margin-left: 47px;
+}
+.navbar-brand.mt-12{
+  margin-top:px;
+}
+.light-button{
+  font-weight: 400px;
+  font-size: 13px;
+  width: 131.66px;
+  height: 41.34px;
+  margin-right: 48px;
+}
+.mt-25{
+  margin-top: 10px;
+}
+.mr-32{
+  margin-right: 25px;
+}
+.mr-59{
+  margin-left: 520px;
+}
+.ml-88{
+  margin-left: 88px;
+}
+.btn.btn-background{
+  font-weight: 400px;
+  font-size: 13px;
+  line-height: 19.5px;
+  margin-top: 20px;
+  background-color: var(--secondary);
+}
+.pl-50{
+  padding-left: 50.5px;
+}
+.pr-50{
+  padding-right: 50.5px;
+}
+.line{
+  height: 4px;
+  background-color: var(--secondary);
+  border-radius: 20px;
+}
+.width-30{
+  width: 30.97px;
+}
+.dot{
+  height: 4px;
+  border-radius: 20px;
+  background-color: #FA8305;
+}
+.width-5{
+  width: 5px;
+}
+.right{
+  right: 14px;
+}
+.mt-6{
+  margin-top: 6.8px;
+}
+.background-3{
+  background-color: var(--purpule);
+}
+.ml-145{
+  margin-left: 50px;
+}
+.width-807{
+  width: 670px;
+}
+.height-761{
+  height: 761px;
+}
+.img-cry1{
+  left: 828px;
+  top: 202px;
+}
+.img-unreal{
+  top: 218px;
+  left: 1168px;
+}
+.img-unity{
+  top: 409px;
+  left: 649px;
+}
+.first-section-left{
   height: 409px;
+  width:370px;
+  margin-top: 120px;
 }
-
-
-#btn a{
-  text-decoration: none;
-  font-size: 16px;
-  color: var(--white);
+.pl-100{
+  padding-left: 150px;
 }
-
-#btn1{
-  background-color: #5141AA;
+.pr-100{
+  padding-left: 200px;
+}
+.first-section-left-p1{
+  font-weight: 700;
+  width: 479px;
+  color: var(--secondary);
   font-size: 20px;
-  border-radius: 10px;
+}
+.gap-110{
+  gap: 110px;
+}
+.first-section-left-p2{
+  color: var(--white);
+  font-size: 50px;
+  font-weight: 700;
+  margin-top: 17px;
+  line-height: 77.6px;
+}
+.first-section-left-p3{
+  color: var(--white);
+  font-size: 16px;
   font-weight: 500;
-  line-height: 37.5px;
+  margin-top: 26px;
 }
-
-.ul{
-  list-style: none;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  gap: 47px;
-  margin-left: 110px;
-  margin-right: 146px;
-  margin-top: 57px;
+.first-section-left-btn{
+  text-decoration: none;
+  width: 195px;
+  height: 53px;
+  margin-top: 48px;
+  font-size: 16px;
+  background-color: var(--secondary);
 }
-#div7-top{
-  font-family: rubik, serif;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 57px;
+.mt-132{
+  margin-top: 132px;
 }
-#spn{
-  font-family: rubik, serif;
+.second-section-top-p{
+  width: 430px;
+  font-family: Rubik;
   font-weight: 700;
   font-size: 31px;
-  line-height: 58px;
-  margin-left: 120px;
 }
-
-
-.games:hover{
-  opacity: 0.5;
-}
-
-.picture-caption:hover .fire{
-  transform: scale(1.3);
-  transition: ease-in-out;
-}
-#span2{
-  margin-bottom: 32px;
-  display: block;
-  font-family: Poppins, serif;
-  font-size: 30px;
-  font-weight: 600;
-  line-height: 56px;
-  text-align: left;
-
-}
-#p4{
-  width: 545px;
-  height: 101px;
-  margin-top: 67px;
-  margin-left: 147px;
-  font-family: Poppins,serif;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 30px;
-  text-align: left;
-
-}
-#div10{
-  margin-top: 150px;
-  margin-left: 148px;
-}
-#dots{
-  position: absolute;
-  left: 972px;
-  top: 1810px;
-}
-#spider{
-  width:1146px;
-  height:462px;
-  border-radius:5px;
-  margin-right:146px;
-  z-index: 1;
-  position: relative;
-}
-.div11{
-  width: 1440px;
-  height: 678px;
-}
-.div12{
-  margin-top: 148px;
-  color: var(--white);
-}
-
-.div12 span{
-  width: 350px;
-  display: block;
-  font-weight: 700;
-  font-size: 30px;
-  margin-left: 568px;
-  margin-right: 567px;
-  margin-bottom: 15px;
-}
-.div12 p{
-  width: 497px;
-  font-weight: 400;
-  font-size: 14px;
-  margin-left: 472px;
-  margin-right: 470px;
-  text-align: center;
-}
-.div13{
-  margin-top: 71px;
-  margin-left: 136px;
-  margin-right: 134px;
-  display: flex;
-  flex-direction: column;
-  gap: 33px;
-}
-.image1{
-  display: flex;
-  flex-direction: row;
-  gap: 27px;
-
-}
-#see-all-button{
-  margin-left: 651px;
-  margin-right: 650px;
-  margin-top: 72px;
+.btn-second-section{
   width: 139px;
   height: 57px;
   font-family: Rubik;
   font-weight: 500;
   font-size: 20px;
   background-color: var(--primary2-100);
-  border: 2px solid var(--primary2-100);
-  border-radius: 10px;
-  color: var(--white);
 }
-
-.div14{
-  margin-top: 234px;
+.second-section-buttom{
+  list-style: none;
+  margin-top: 57px;
+}
+.card-border{
+  border: none;
+}
+.card-bottom{
+  margin-top: 10px;
+  gap: 9px;
+  font-family: Rubik;
+  font-size: 22px;
+  font-weight: 500;
+}
+.lorem{
+  width: 826px;
+  height: 132px;
+  font-weight: 600;
+  font-size: 35px;
+  color: var(--white);
+  margin-top: 129px;
+}
+.third-section{
   width: 545px;
-  height: 129px;
+  height: 173px;
   margin-left: 148px;
-  color: var(--white);
 }
-
-.div14 span{
+.third-section-span{
   font-weight: 600;
   font-size: 30px;
+  margin-top: 67px;
 }
-.div14 p{
+.third-section-p{
   font-weight: 400;
   font-size: 16px;
   margin-top: 32px;
 }
-.div15{
-  background-color:#1C140F;
+.rect4{
+  width: 1146px;
+  height: 462px;
+  margin-top: 46px;
+  margin-left: 148px;
+  margin-left: 146px;
+}
+.group21{
+  width: 196px;
+  height: 154px;
+  top: 1788px;
+  left: 972px;
+}
+.fourth-section{
+  width: 1440px;
+  height: 678px;
+  margin-bottom: 234px;
+}
+.mt-148{
+  margin-top: 148px;
+}
+.fourth-section-p1{
+  width: 305px;
+  font-weight: 700;
+  font-size: 30px;
+  margin-left: 568px;
+  margin-right: 567px;
+}
+.fourth-section-p2{
+  width: 497px;
+  font-weight: 400;
+  font-size: 14px;
+  margin-left: 472px;
+  margin-right: 470px;
+}
+.fourth-section-buttom{
+  margin-top: 71px;
+  margin-left: 136px;
+  margin-right: 134px;
+  gap: 33px;
+}
+.gap-28{
+  gap: 28px;
+}
+.btn-margin{
+  margin-left: 651px;
+  margin-right: 650px;
+  margin-top: 72px;
+}
+.fifth-section{
+  width: 545px;
+  height: 129px;
+  margin-left: 148px;
+}
+.fifth-section-span{
+  font-weight: 600;
+  font-size: 30px;
+}
+.fifth-section-p{
+  font-weight: 400;
+  font-size: 16px;
+  margin-top: 32px;
+}
+.sixth-section{
+  background-color: var(--black);
   width: 1170px;
   height: 189px;
   border-radius: 15px;
   margin-left: 136px;
   margin-right: 134px;
   margin-top: 74px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
 }
-.div16{
-  color: var(--white);
+.sixth-section-left{
   width: 636px;
   height: 107px;
   margin-left: 56px;
   margin-top: 40px;
   margin-bottom: 41px;
 }
-.div16 span{
+.sixth-section-left-span{
   font-weight: 500;
   font-size: 30px;
 }
-.div16 p{
+.sixth-section-left-p{
   width: 636px;
   font-weight: 400;
   font-size: 17px;
+  margin-top: 15px;
 }
-.div17{
+.sixth-section-right{
   width: 385.68px;
   height: 48px;
   margin-top: 71px;
   margin-right: 30px;
   background-color: var(--white);
-  border-radius: 8px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
 }
-
-.div17 p{
-
+.sixth-section-right-p{
   font-size: 13px;
   font-weight: 300;
   width: 200px;
   height: 20px;
   color: var(--gray);
   margin-left: 35px;
+  padding-top: 15px;
 }
-.div17 button{
-  background-color: var(--secondary);
+.sixth-section-btn{
   color: var(--white);
   width: 105px;
   height: 37px;
-  border: 1px solid var(--secondary);
-  border-radius: 8px;
-  margin-right: 6px;
-  margin-top: 1px;
+  margin-right: 6.24px;
+  margin-top: 5px;
 }
-#div18{
-  background-color: #070707;
-  width: 1440px;
-  height: 376px;
+@media (width<=768px){
+  body{
+    width: 768px;
+  }
+  .first-section-left-btn{
+    width: 195px;
+  }
+  .first-section-left-p1{
+    width: 273px;
+    margin-left: 120px;
+  }
+  .second-section-top-p{
+    margin-top: 90px;
+  }
+  .ml-md{
+    margin-left: 200px;
+  }
+  .first-section-left-p2{
+    font-size: 50px;
+  }
+  .lorem{
+    font-size: 30px;
+    width: 627px;
+    margin-top: 75px;
+  }
+  .first-section-left{
+    width: 527px;
+    margin-top: 0px;
+  }
+  .img-mt{
+    margin-top: 42px;
+  }
+
+
 
 }
+@media  (width<=480px){
+  body{
+    width: 480px;
+  }
+  .first-section-left-btn{
+    width: 244px;
+    margin-top: 5px;
+  }
+  .first-section-left-p2{
+    font-size: 40px;
+  }
+  .first-section-left{
+    margin-top: 40px;
+  }
+  .first-section-left-p1{
+    width: 273px;
+    margin-left: 100px;
+  }
+  .second-section-top-p{
+    margin-top: 60px;
+  }
+  .second-section-top-p{
+    font-size: 24px;
+  }
+  .ml-xs{
+    margin-left: 5px;
+  }
+  .lorem{
+    font-size: 24px;
+    width: 452px;
+    margin-top: 70px;
+  }
+  .img-mt{
+    margin-top: 10px;
+  }
+}
 
-/* good luck */
+
