--- a/styles/style.css
+++ b/styles/style.css
@@ -201,14 +201,15 @@ body{
   margin-top: 129px;
 }
 .third-section{
-  width: 545px;
+  width: 600px;
   height: 173px;
-  margin-left: 148px;
+  margin-top: 67px;
+  margin-left: 150px;
+  margin-bottom: 46px
 }
 .third-section-span{
   font-weight: 600;
   font-size: 30px;
-  margin-top: 67px;
 }
 .third-section-p{
   font-weight: 400;
@@ -219,18 +220,14 @@ body{
   width: 1146px;
   height: 462px;
   margin-top: 46px;
-  margin-left: 148px;
-  margin-left: 146px;
 }
 .group21{
   width: 196px;
   height: 154px;
-  top: 1788px;
+  top: 2022px;
   left: 972px;
 }
 .fourth-section{
-  width: 1440px;
-  height: 678px;
   margin-bottom: 234px;
 }
 .mt-148{
@@ -240,34 +237,50 @@ body{
   width: 305px;
   font-weight: 700;
   font-size: 30px;
-  margin-left: 568px;
-  margin-right: 567px;
+  margin-left: 500px;
 }
 .fourth-section-p2{
   width: 497px;
   font-weight: 400;
   font-size: 14px;
-  margin-left: 472px;
-  margin-right: 470px;
+  margin-left: 400px;
 }
 .fourth-section-buttom{
   margin-top: 71px;
-  margin-left: 136px;
-  margin-right: 134px;
-  gap: 33px;
+  margin-left: 80px;
 }
-.gap-28{
-  gap: 28px;
+.rec19{
+  width: 246px;
+  height: 223px;
+}
+.rec18{
+  width: 401px;
+  height: 223px;
+}
+.rec20{
+  width: 469px;
+  height: 223px;
+}
+.rec15{
+  width: 382px;
+  height: 223px;
+}
+.rec16{
+  width: 382px;
+  height: 223px;
+}
+.rec17{
+  width: 352px;
+  height: 223px;
 }
 .btn-margin{
   margin-left: 651px;
-  margin-right: 650px;
   margin-top: 72px;
 }
 .fifth-section{
-  width: 545px;
-  height: 129px;
+  width: 550px;
   margin-left: 148px;
+  margin-top: 100px;
 }
 .fifth-section-span{
   font-weight: 600;
@@ -317,8 +330,8 @@ body{
   width: 200px;
   height: 20px;
   color: var(--gray);
-  margin-left: 35px;
-  padding-top: 15px;
+  margin-left: 5px;
+  padding-top: 12px;
 }
 .sixth-section-btn{
   color: var(--white);
@@ -326,6 +339,9 @@ body{
   height: 37px;
   margin-right: 6.24px;
   margin-top: 5px;
+  background-color: var(--secondary);
+  font-size: 13px;
+  font-weight: 400;
 }
 @media (width<=768px){
   body{
@@ -359,13 +375,100 @@ body{
   .img-mt{
     margin-top: 42px;
   }
-
-
-
+  .third-section{
+    width: 600px;
+    height: 173px;
+    margin-top: 33px;
+    margin-left: 118px;
+  }
+  .rect4{
+    width: 573px;
+    height: 462px;
+    margin-left: 30px;
+  }
+  .fifth-section{
+    width: 674px;
+  }
+  .img-md{
+    margin-right: 120px;
+  }
+  .fourth-section-p1{
+    margin-left: 200px;
+  }
+  .fourth-section-p2{
+    margin-left: 100px;
+  }
+  .rec19{
+    width: 246px;
+    height: 223px;
+  }
+  .rec18{
+    width: 401px;
+    height: 223px;
+  }
+  .rec20{
+    width: 280px;
+    height: 223px;
+  }
+  .rec15{
+    width: 305px;
+    height: 223px;
+  }
+  .rec16{
+    width: 335px;
+    height: 223px;
+  }
+  .rec17{
+    width: 352px;
+    height: 223px;
+  }
+  .btn-margin{
+    margin-left: 280px;
+    margin-top: 39px;
+  }
+  .fifth-section{
+    margin-left: 50px;
+    margin-top: 58px;
+  }
+  .fourth-section{
+    height: 800px;
+  }
+  .sixth-section{
+    width: 672px;
+    height: 280px;
+    margin-left: 50px;
+    margin-right: 134px;
+  }
+  .sixth-section-left{
+    margin-left: 15px;
+  }
+  .sixth-section-left-p{
+    width: 636px;
+    font-weight: 400;
+    font-size: 17px;
+    margin-top: 15px;
+  }
+  .sixth-section-right{
+    width: 606px;
+    margin-top: 15px;
+    margin-left: 32px;
+  }
+  .sixth-section-right-p{
+    width: 200px;
+    height: 20px;
+    margin-left: 70px;
+    padding-top: 10px;
+  }
+  .sixth-section-btn{
+    width: 164px;
+    margin-right: 1px;
+    margin-top: 1px;
+  }
 }
 @media  (width<=480px){
   body{
     width: 480px;
+    height: 157px;
   }
   .first-section-left-btn{
     width: 244px;
@@ -398,6 +501,134 @@ body{
   .img-mt{
     margin-top: 10px;
   }
+  .third-section{
+    width: 452px;
+    margin-left: 8px;
+  }
+  .rect4{
+    width: 452px;
+    height: 388px;
+    margin-right: 32px;
+  }
+  .img-md{
+    margin-left: 40px;
+  }
+  .fourth-section{
+    width: 480px;
+    height: 800px;
+  }
+  .fourth-section-p1{
+    margin-left: 80px;
+  }
+  .fourth-section-p2{
+    width: 400px;
+    margin-left: 30px;
+  }
+  .fourth-section-buttom{
+    width: 400px;
+  }
+  .rec20{
+    width: 401px;
+    height: 223px;
+  }
+  .rec15{
+    width: 401px;
+    height: 223px;
+  }
+  .rec17{
+    width: 401px;
+    height: 223px;
+  }
+  .btn-margin{
+    margin-left: 160px;
+    margin-top: 50px;
+  }
+  .fifth-section{
+    margin-left: 20px;
+    margin-top: 0px;
+    width: 443px;
+  }
+  .sixth-section{
+    width: 443px;
+    height: 297px;
+    margin-left: 20px;
+  }
+  .sixth-section-left{
+    margin-left: 15px;
+  }
+  .sixth-section-left-p{
+    width: 378px;
+    font-weight: 400;
+    font-size: 17px;
+    margin-top: 15px;
+  }
+  .sixth-section-right{
+    width: 378px;
+    margin-top: 15px;
+    margin-left: 32px;
+  }
+  .sixth-section-left-span{
+    margin-left: 70px;
+  }
+  .sixth-section-right-p{
+    width: 200px;
+    margin-left: 30px;
+    position: absolute;
+
+  }
+  .sixth-section-btn{
+    width: 143px;
+    margin-left: 200px;
+    margin-bottom: 1px;
+  }
+  .myfooter{
+    height: 574px;
+    background-color: var(--black-700);
+  }
+  .footer-sec1-1{
+    height: 161px;
+    margin-bottom: 53px;
+    margin-left: 50px;
+  }
+  .footer-sec1-2{
+    height: 161px;
+    margin-left: 50px;
+  }
+  .footer-sec1-3{
+    height: 161px;
+    margin-left: 50px;
+  }
+  .footer-sec1-1 .p2{
+    width: 199px;
+  }
+  .footer-sec1-1 .p3{
+    margin-top: 50px;
+  }
+  .footer-sec1-3 .p2{
+    width: 1000px;
+  }
+  .footer-sec1-4{
+    display: flex;
+    flex-direction: row;
+    height: 50px;
+    position: absolute;
+    top: 5610px;
+    left: 50px;
+  }
+  .footer-sec1-4 .image{
+    width: 60px;
+    height: 60px;
+  }
+  .myfooter .copy{
+    margin-left: 200px;
+    margin-top: 95px;
+    width: 300px;
+    height: 25px;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 24.78px;
+  }
+
 }
 
 
